AH-2004-11-15-0: Bugfix:    Use hp11 binaries on HP11 64 bit
                            Use lx24-x86 binaries for Linux 2.6
                 Review:    AS


AH-2004-11-12-0: Doc:       Various fixes with man pages.
                 Review:    TBD
                 Bugfix:    MD-2004-10-21-0 broke DRMAA
                            Added per thread/per process init 
                            to DRMAA setup code
                 Review:    DT

JG-2004-11-15-0: Bugfix:    Fixed broken build.

DT-2004-11-12-0: Bugfix:    o qmaster now uses very little memory for
                              calculating subordinate queue suspension.
                            o qmaster now ignores NULL job ids.
                            o "" is now rejected as an invalid job id.
                            o qconf now sets status to 1 for failed host group
                              and cluster queue operations.
                            o The lib path will now only be updated if the execd
                              param, SET_LIB_PATH, is set.
                            o The inheritance by jobs of environment of the
                              shell which started the execd can now be disabled
                              with the INHERIT_ENV execd param.
                            o qconf now correctly prints subordinate queue
                              lists.
                            o Subordinate queues are no properly suspended at
                              qmaster startup.
                            o Fixed broken build on Alpha 5
                 Review:    AH, SG, AS, AA, EB
                 Changed:   sgeobj, qmaster, execd, shepherd, qconf, qhost
                 Issue:     1289, 1291, 1295, 1300, 1324, 1335
                 Bugtraq:   6194625, 6176181, 6174915, 6185211, 6193348, 6194713

CR-2004-11-12-0: Bugfix:    - commlib called connect() even when connect is
                              already in progress
                 Changed:   commlib